Implemented Shell sort

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <button style="margin: 20px;">Insertion Sort</button>
             <button style="margin: 20px;">Merge Sort</button>
             <button style="margin: 20px;">Quick Sort</button>
-            <button style="margin: 20px;">Heap Sort</button>
+            <button style="margin: 20px;">Shell Sort</button>
         </div>
 
      
